fix vh flicker

--- a/styles/index.css
+++ b/styles/index.css
@@ -56,7 +56,7 @@ body {
 }
 
 .main-page {
-  height: calc(var(--vh, vh) * 100);
+  height: calc(var(--vh, 1vh) * 100);
   width: 100vw;
   position: relative;
 }
